# Tesseract.swift

./: .gitignore  .travis.yml  Cargo.toml  Cartfile  Cartfile.resolved  DAPP.MD  NOTICE  Package.swift  Podfile  README.md  RUST.MD  TRANSPORTS.MD  Tesseract-Client.podspec  Tesseract-Core.podspec  Tesseract-Service.podspec  Tesseract-Shared.podspec  Tesseract.podspec  TesseractSDK.podspec  WALLET.MD  generate_binary_zip.sh  generate_headers.sh  generate_xcframework.sh
.github/workflows/: on_new_release.yml  publish_crate.yml  publish_pod.yml  release.yml  test.yml
Examples/DApp/: Info.plist
Examples/Examples.xcodeproj/: project.pbxproj
Examples/Rust/DApp/: AlertProvider.swift  AppCore.swift
Examples/Rust/Examples.xcodeproj/: project.pbxproj
Examples/Rust/Rust/: Cargo.toml
Examples/Rust/Rust/app/: Cargo.toml  build.rs  cbindgen.toml
Examples/Rust/Rust/app/src/: delegate.rs  lib.rs
Examples/Rust/Rust/wallet/: Cargo.toml  build.rs  cbindgen.toml
Examples/Rust/Rust/wallet/src/: init.rs  lib.rs
Examples/Swift/Rust/app/: Cargo.toml  cbindgen.toml
Examples/Swift/Rust/app/src/: delegate.rs  lib.rs
Examples/Wallet/: ContentView.swift  Info.plist
Rust/: generate_binary_zip.sh  generate_headers.sh  generate_xcframework.sh
Rust/client/: Cargo.toml  build.rs  cbindgen.toml
Rust/client/src/: connection.rs  lib.rs  status.rs  transport.rs
Rust/framework/: Cargo.toml  cbindgen.toml
Rust/framework/src/: client.rs  init.rs  lib.rs  service.rs
Rust/framework/src/protocols/: mod.rs
Rust/framework/src/protocols/substrate/: client.rs  mod.rs  service.rs
Rust/framework/src/protocols/test/: client.rs  mod.rs  service.rs
Rust/sdk/: Cargo.toml
Rust/sdk/src/: client.rs  lib.rs  service.rs
Rust/service/: Cargo.toml  cbindgen.toml
Rust/service/src/: lib.rs  transport.rs
Rust/shared/: Cargo.toml  cbindgen.toml
Rust/shared/src/: lib.rs
Rust/tesseract/: Cargo.toml  cbindgen.toml
Rust/tesseract/src/: client.rs  init.rs  lib.rs  service.rs
Rust/tesseract/src/protocols/: mod.rs
Rust/tesseract/src/protocols/substrate/: client.rs  mod.rs  service.rs
Rust/tesseract/src/protocols/test/: client.rs  mod.rs  service.rs
Rust/transport/: Cargo.toml  cbindgen.toml
Rust/transport/src/: error.rs  lib.rs  protocol.rs
Rust/transport/src/client/: connection.rs  status.rs  transport.rs
Rust/transport/src/service/: processor.rs  transport.rs
Rust/transports/: Cargo.toml  cbindgen.toml
Rust/transports/src/: error.rs  lib.rs  protocol.rs
Rust/transports/src/client/: connection.rs  mod.rs  status.rs  transport.rs
Rust/transports/src/service/: mod.rs  processor.rs  transport.rs
Rust/utils/: Cargo.toml  cbindgen.toml
Rust/utils/src/: array.rs  data.rs  error.rs  future_impls.rs  lib.rs  map.rs  option.rs  panic.rs  response.rs  result.rs  string.rs  traits.rs
Rust/utils/src/future/: cfuture.rs  from.rs  into.rs  mod.rs
Rust/utils/src/ptr/: any.rs  drop.rs  sync.rs
Sources/CTesseract/: dummy.c
Sources/CTesseractClient/: module.modulemap  tesseract_client.h
Sources/CTesseractCommon/: module.modulemap  tesseract_common.h
Sources/CTesseractService/: module.modulemap  tesseract_service.h
Sources/CTesseractShared/: dummy.c
Sources/CTesseractUtils/: module.modulemap  tesseract_utils.h
Sources/TesseractClient/: ActivityItemSource.swift  ExtensionTransport.swift  NativeTransport.swift  Serializer.swift  Service.swift  SingleTransportDelegate.swift  Tesseract.swift  TesseractDelegate.swift  Transport.swift  UIActivityType+All.swift
Sources/TesseractClientTransports/: CoreTransport.swift  NativeTransport.swift  Transport.swift
Sources/TesseractCommon/: Error.swift
Sources/TesseractService/: ExtensionTransport.swift  NativeTransport.swift  Service.swift  SubstrateService.swift  Tesseract.swift  TestService.swift  Transport.swift
Sources/TesseractServiceTransports/: CoreTransport.swift  NativeTransport.swift  Transport.swift
Sources/TesseractShared/: ErrorCodes.swift  LogLevel.swift  Service.swift  SubstrateService.swift  TesseractBase.swift  TestService.swift
Sources/TesseractTransportsClient/: CoreStatus.swift  CoreTransport.swift  Transport.swift
Sources/TesseractTransportsService/: CoreTransport.swift  Transport.swift  TransportProcessor.swift
Sources/TesseractTransportsShared/: AutoFree+Error.swift  BlockchainProtocol.swift  CoreConvertible.swift  TesseractError+Ext.swift  TesseractError.swift
Sources/TesseractUtils/: AnyPtr.swift  Array.swift  AutoFree.swift  Data.swift  Dictionary.swift  Error.swift  Future.swift  FutureImpls.swift  Init.swift  ObjectPtr.swift  Option.swift  Primitives.swift  Protocols.swift  Result.swift  String.swift  SwiftPtr.swift
Tesseract.xcodeproj/: project.pbxproj
Tests/TesseractTests/: TesseractTests.swift
examples/DApp/: AlertProvider.swift  AppCore.swift  ContentView.swift  DAppApp.swift
examples/Examples.xcodeproj/: project.pbxproj
examples/Extension/: ActionViewController.swift  Info.plist  NativeUI.swift
examples/Wallet/: ContentView.swift  WalletApp.swift  WalletData.swift
examples/rust/: Cargo.toml  xcode_build_step.sh
examples/rust/app/: Cargo.toml  cbindgen.toml
examples/rust/app/src/: delegate.rs  lib.rs
examples/rust/wallet/: Cargo.toml  cbindgen.toml
examples/rust/wallet/src/: lib.rs
rust/: Cargo.toml
rust/tesseract_client/: Cargo.toml  cbindgen.toml
rust/tesseract_client/src/: connection.rs  error.rs  lib.rs  status.rs  transport.rs
rust/tesseract_common/: Cargo.toml  build.rs  cbindgen.toml
rust/tesseract_common/src/: error.rs  error_codes.rs  lib.rs
rust/tesseract_service/: Cargo.toml  cbindgen.toml
rust/tesseract_service/src/: lib.rs  processor.rs  tesseract_ext.rs  transport.rs
rust/tesseract_utils/: Cargo.toml  cbindgen.toml
rust/tesseract_utils/src/: array.rs  bigint.rs  data.rs  error.rs  future_impls.rs  int128.rs  lib.rs  panic.rs  response.rs  result.rs  string.rs  traits.rs
rust/tesseract_utils/src/future/: cfuture.rs  from.rs  into.rs  mod.rs  native.rs  value.rs  wrapper.rs
rust/tesseract_utils/src/ptr/: any.rs  drop.rs  mod.rs  sync.rs
(+52 files in other folders)
