[workspace]
resolver = "2"
members = [ "Rust/sdk", "Rust/transport", "Rust/utils", "Rust/framework" ]

[workspace.package]
authors = ["Daniel Leping", "Yehor Popovych", "Tesseract Systems, Inc."]
edition = "2021"
version = "999.99.9" #AUTOVERSION
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tesseract-one/Tesseract.swift"
documentation = "https://github.com/tesseract-one/Tesseract.swift"
homepage = "https://github.com/tesseract-one/"
categories = ["api-bindings", "authentication", "network-programming"]
keywords = ["blockchain", "dApp", "wallet", "mobile", "bridge"]

[workspace.dependencies]
async-trait = "0.1"
errorcon = "0.1"
log = "0.4"

#tesseract
tesseract-one = "0.5"

#protocols
tesseract-protocol-test = "0.5"
tesseract-protocol-substrate = "0.5"

#local
tesseract-swift-utils = { path = "Rust/utils", version = "999.99.9" } #AUTOVERSION
tesseract-swift-transport = { path = "Rust/transport", version = "999.99.9" } #AUTOVERSION
tesseract-swift = { path = "Rust/sdk", version = "999.99.9" } #AUTOVERSION

[profile.release]
strip = true
lto = true