[package]
name = "tesseract-swift-client"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract-swift-utils = { path = "../utils" }
tesseract-swift-shared = { path = "../shared" }
async-trait = "0.1"
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }

[build-dependencies]
cbindgen = "0.26"
