[package]
name = "tesseract-swift"
description = "Swift specific Tesseract APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
tesseract-swift-utils.workspace = true
tesseract-swift-transport.workspace = true

[features]
default = ["transport-all"]
client = ["tesseract-swift-transport/client"]
service = ["tesseract-swift-transport/service"]
transport-sdk = []
transport-all = ["transport-sdk"]
