[package]
name = "tesseract-swift-shared"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract-swift-utils = { path = "../utils" }
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master" }

[build-dependencies]
cbindgen = "0.26"

