[package]
name = "tesseract-swift"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Tesseract Swift wrapper implementation"
keywords = [ "Tesseract", "Swift", "C" ]

[dependencies]
tesseract-swift-utils = { path = "../utils" }
tesseract-swift-transports = { path = "../transports" }
tesseract.workspace = true
tesseract-protocol-test = { workspace = true, optional = true }
tesseract-protocol-substrate = { workspace = true, optional = true }
async-trait.workspace = true
errorcon.workspace = true
log.workspace = true
log-panics = { version = "2", features = ["with-backtrace"] }
stderrlog = "0.5"

[build-dependencies]
cbindgen.workspace = true

[features]
client = ["tesseract-swift-transports/client", "tesseract/client"]
service = ["tesseract-swift-transports/service", "tesseract/service"]
protocol-test-client = ["client", "tesseract-protocol-test/client"]
protocol-test-service = ["service", "tesseract-protocol-test/service"]
protocol-substrate-client = ["client", "tesseract-protocol-substrate/client"]
protocol-substrate-service = ["service", "tesseract-protocol-substrate/service"]
client-all = ["protocol-test-client", "protocol-substrate-client"]
service-all = ["protocol-test-service", "protocol-substrate-service"]

[lib]
crate-type = ["staticlib"]

