[package]
name = "tesseract-swift-transports"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract transports for Swift"
keywords = [ "Tesseract", "Swift", "Transport", "C" ]
edition = "2021"

[dependencies]
tesseract-swift-utils = { path = "../utils" }
tesseract = { path = "../../../Tesseract.rs/tesseract" }
async-trait = "0.1"
errorcon = "0.1"
log = "0.4"
thiserror = "1.0"

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]

[build-dependencies]
cbindgen = "0.26"
