[package]
name = "tesseract-swift-transports"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Tesseract transports for Swift"
keywords = [ "Tesseract", "Swift", "Transport", "C" ]

[dependencies]
tesseract-swift-utils = { path = "../utils" }
tesseract.workspace = true
async-trait.workspace = true
errorcon.workspace = true
log.workspace = true
thiserror = "1.0"

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]

[build-dependencies]
cbindgen.workspace = true
