[package]
name = "tesseract-swift-utils"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract interop helpers for Swift."
keywords = [ "Tesseract", "Swift", "C" ]
edition = "2021"

[dependencies]
log = "0.4"
num-bigint = { version = "0.4", optional = true }

[build-dependencies]
cbindgen = "0.26"

[features]
bigint = ["dep:num-bigint"]
