[package]
name = "tesseract-swift-utils"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Tesseract interop helpers for Swift."
keywords = [ "Tesseract", "Swift", "C" ]

[dependencies]
log.workspace = true
num-bigint = { version = "0.4", optional = true }

[build-dependencies]
cbindgen.workspace = true

[features]
bigint = ["dep:num-bigint"]
