[package]
name = "tesseract-swift-utils"
description = "Tesseract interop helpers for Swift. Check tesseract-swift crate for full SDK."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
log.workspace = true
num-bigint = { version = "0.4", optional = true }

[features]
bigint = ["dep:num-bigint"]
