[package]
name = "tesseract_client"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract_utils = { path = "../tesseract_utils" }
async-trait = "0.1.57"
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }

[build-dependencies]
cbindgen = "0.24"

[lib]
name = "tesseract_client"
path = "src/lib.rs"
crate-type = ["rlib"]
