[package]
name = "tesseract_service"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract_utils = { path = "../tesseract_utils" }
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["service"] }

[build-dependencies]
cbindgen = "0.24"

[lib]
name = "tesseract_service"
path = "src/lib.rs"
crate-type = ["rlib"]
