[package]
name = "tesseract_utils"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract helpers for Swift."
keywords = [ "Tesseract", "Swift", "C" ]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", optional = true }

[build-dependencies]
cbindgen = "0.24"

[features]
default = ["bigint"]
bigint = ["dep:num-bigint"]

[lib]
name = "tesseract_utils"
path = "src/lib.rs"
crate-type = ["rlib"]
