[workspace]
resolver = "2"
members = [
    "app",
    "wallet"
]

[workspace.dependencies]
tesseract-one = "0.5"
tesseract-protocol-test = "0.5"

tesseract-swift = { path = "../../../Rust/sdk" }

async-trait = "0.1"
errorcon = "0.1"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
stderrlog = "0.5"
cbindgen = "0.26"

[profile.release]
strip = true
lto = true