[package]
name = "app"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract_utils = { path = "../../../rust/tesseract_utils" }
tesseract_client = { path = "../../../rust/tesseract_client" }
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }
tesseract-protocol-test = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }
[build-dependencies]
cbindgen = "0.24"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["staticlib"]
