[package]
name = "app"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract-swift-utils = { path = "../../../../Rust/utils" }
tesseract-swift-transports = { path = "../../../../Rust/transports", features = ["client"]}
errorcon = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master" }
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }
tesseract-protocol-test = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["client"] }
async-trait = "0.1"
log = "0.3.9"
log-panics = { version = "1.2", features = ["with-backtrace"]}
stderrlog = "0.3"

[build-dependencies]
cbindgen = "0.26"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["staticlib"]
