[package]
name = "app"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract SDK Client Example"
edition = "2021"

[dependencies]
tesseract-swift = { workspace = true, features = ["client"] }

tesseract-one = { workspace = true, features = ["client"] }
tesseract-protocol-test = { workspace = true, features = ["client"] }

async-trait.workspace = true
errorcon.workspace = true
log.workspace = true
log-panics.workspace = true
stderrlog.workspace = true

[build-dependencies]
cbindgen.workspace = true

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["staticlib"]
