[package]
name = "wallet"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Cardano bindings for C."
keywords = [ "Tesseract", "Cardano", "C" ]
edition = "2021"

[dependencies]
tesseract-swift-utils = { path = "../../../../Rust/utils" }
tesseract-swift-transports = { path = "../../../../Rust/transports", features = ["service"]}
tesseract = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["service"] }
tesseract-protocol-test = { git = "https://github.com/tesseract-one/Tesseract.rs", branch = "master", features = ["service"] }
async-trait = "0.1"

[build-dependencies]
cbindgen = "0.26"

[lib]
name = "wallet"
path = "src/lib.rs"
crate-type = ["staticlib"]
