[package]
name = "wallet"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract SDK Service Example"
edition = "2021"

[dependencies]
tesseract-swift = { workspace = true, features = ["service"] }

tesseract-one = { workspace = true, features = ["service"] }
tesseract-protocol-test = { workspace = true, features = ["service"] }

async-trait.workspace = true
errorcon.workspace = true
log.workspace = true
log-panics.workspace = true
stderrlog.workspace = true

[build-dependencies]
cbindgen.workspace = true

[lib]
name = "wallet"
path = "src/lib.rs"
crate-type = ["staticlib"]
